# PluginManager

./: CMakeLists.txt  PluginManager.sln  PluginManager.vcxproj  PluginManager.vcxproj.filters  PluginManager_all.cpp  README  clean_vsbuild.bat  main.cpp
CInterface/: CFunctionImpl.cpp  CFunctionImpl.h  CFunctionMacro.h  CPluginCommon.h
CJsonHelper/: CJsonHelper.cpp  CJsonHelper.h
Common/: CriticalSection.h  NDBufferPool.cpp  NDBufferPool.h
DataProcess/: NDDataProcess.cpp  NDDataProcess.h
DynamicLoad/: NDDynamicLoad.cpp  NDDynamicLoad.h  NDPluginLibraryLoad.cpp  NDPluginLibraryLoad.h
Global/: NDPluginManagerGlobal.cpp  NDPluginManagerGlobal.h  NDStaticFunctionGlobal.cpp  NDStaticFunctionGlobal.h
Thread/: NDTaskThread.cpp  NDTaskThread.h  NDTaskThreadManager.cpp  NDTaskThreadManager.h  NDThread.cpp  NDThread.h
ZMQService/: NDNetService.cpp  NDNetService.h  ZMQService.cpp  ZMQService.h  ZMQServiceImpl.cpp  ZMQServiceImpl.h
